Story #14223: Manage custom ElasticSearch mapping and search by tenants and grouped tenants
Add new enhancement on ElasticSearch index management :

* The ability to manage index mapping by tenant or group of tenants
* The ability to declare different way of search on fields